feat: introduction updated

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -79,27 +79,13 @@ Never too far down, to come back
 \label{chap:introduction}
 %----------------------------------------------------------------------------------------
 
-In recent years, there has been a notable increase in the utilization of artificial intelligence (AI) systems across various sectors. This rise is attributed to advancements in technology, the accessibility of extensive data, and heightened computational capabilities. \\
-AI has transcended its role as a mere performance enhancer and has begun exerting a profound impact on social contexts. These systems are now pervasive in healthcare, education, criminal justice, and other crucial domains, fundamentally reshaping decision-making processes and societal interactions. However, the reliance of AI systems on data for learning and decision-making implies that they inherit the biases embedded in these data. This inherent bias has the potential to perpetuate existing societal imbalances and prejudices. \\
-Addressing bias and ensuring fairness in AI algorithms is hence a pressing concern, necessitating continuous research, responsible development practices, and vigilant oversight to guarantee equitable outcomes for all. \\ 
-In this discussion, there will be a deep inspection into the intricate dynamics of biases and fairness in AI systems, exploring viable strategies to effectively mitigate these challenges.
+Artificial Intelligence (AI) has witnessed a remarkable surge in prominence and utility in recent years, emerging as a transformative force in various domains. From autonomous vehicles to healthcare diagnosis and recommendation systems, AI applications are becoming increasingly pervasive in our daily lives. However, this rapid expansion has brought to the forefront a critical concern: the presence of bias within AI systems.\\
+The concept of bias in AI refers to the unintended or systematic favoring of certain groups or characteristics within the data, algorithms, or decision-making processes, leading to unfair and inequitable outcomes. In this era of AI-driven decision-making, it is imperative to address bias to prevent discrimination and inequality. Moreover, fairness, as an ethical principle, represents the aspiration to ensure that AI systems produce equitable and just results for all individuals, regardless of their personal attributes. \\
+The impact of bias and unfairness in AI systems extends beyond mere technological concerns. These issues have profound societal implications, affecting areas such as employment, education, and access to critical services. Biased AI systems can perpetuate existing inequalities, reinforce harmful stereotypes, and undermine fundamental principles of justice and equality. \\
+In the realm of education, where data-driven decision-making has become increasingly prevalent, the stakes are particularly high. Educational institutions use AI systems to make decisions about student admissions, learning outcomes, and resource allocation. Consequently, mitigating bias and ensuring fairness in AI-driven education systems is not merely a technological challenge but a moral and societal imperative. \\
+This work introduces a comprehensive Fair-by-Design workflow, meticulously elaborated in the "Contribution" chapter. The essence of this workflow lies in its capacity to incorporate fairness considerations at the very inception of AI system design. In this thesis, four distinct and promising approaches to guarantee fairness are integrated into the workflow, affording a thorough and unbiased comparison of their effectiveness in bias mitigation. \\
+The structure of this thesis is organized as follows: The \textbf{State of the Art} chapter undertakes an exhaustive review of the existing approaches and methodologies aimed at mitigating bias and addressing fairness in the development of AI systems. It provides the foundation upon which the innovative Fair-by-Design workflow is built. The \textbf{Contribution} chapter delves into the intricacies of the workflow, elucidating how it seamlessly integrates various fairness approaches into the design process. The \textbf{Validation} chapter meticulously presents the results obtained from the application of these fairness approaches, offering an empirical comparison of their performance and effectiveness. Finally, the \textbf{Conclusion} chapter not only provides insights gleaned from the research but also outlines prospective directions for further advancements in this critical field.
 
-\paragraph{Artificial Intelligence}
-In recent years, artificial intelligence (AI) has undergone a remarkable evolution, transforming from a theoretical concept to a pervasive force shaping various facets of our lives. Advances in machine learning, particularly deep learning, have fueled this growth, enabling AI systems to process vast amounts of data and extract meaningful insights. 
-Notably, breakthroughs in natural language processing have led to more conversational AI, making interactions with machines increasingly human-like. Moreover, AI applications have expanded across sectors, encompassing healthcare, finance, transportation, and more. \\
-However, ethical considerations and the responsible development of AI have gained significant traction, prompting discussions on privacy, bias mitigation, and ensuring that AI benefits all of society. The future of AI promises continued innovation, fostering a symbiotic relationship between humans and machines for a more technologically enriched world. \cite{10.1145/3457607}
-\paragraph{Bias}
-In the realm of artificial intelligence, the issue of bias is a critical concern. AI systems are trained on historical data, and if this data carries biases related to gender, race, or other factors, the AI can inadvertently perpetuate and amplify these biases in its predictions or decisions. \\
-Addressing bias in AI necessitates a proactive approach, from carefully curating training data to developing algorithms that are designed to detect and mitigate bias. Furthermore, promoting diversity and inclusivity in the development teams is vital to ensuring that biases are recognized and addressed effectively. \cite{10.1145/3457607}
-\paragraph{Fairness}
-Ensuring fairness in AI is an ongoing and essential goal. It involves designing and implementing AI systems in a way that does not discriminate against individuals or groups based on characteristics like race, gender, or socioeconomic status. Achieving fairness demands a multidimensional approach, including a clear definition of fairness metrics, active involvement of diverse stakeholders, and regular audits of AI systems to detect and rectify any unfair biases. Additionally, incorporating transparency and accountability into the AI development process is crucial for building trust and ensuring fair outcomes for all users. \cite{10.1145/3457607} \cite{10.1145/3194770.3194776}
-\paragraph{Machine Learning and data}
-! Machine learning algorithms heavily rely on data to make predictions and decisions. However, the quality and representativeness of the data used are critical factors, especially in the context of fairness. Biases and unfairness can be inadvertently ingrained in machine learning models if the training data is skewed or reflects historical biases present in society. The data source plays a pivotal role in fairness issues, as biases present in the data, whether due to societal, cultural, or historical factors, can perpetuate and reinforce discriminatory outcomes. If the training data disproportionately represents a certain group, the model may learn to favor that group, leading to biased predictions and decisions. It is imperative to carefully curate and preprocess data, strive for diversity and representativeness, and continually evaluate and mitigate biases to promote fairness and ensure equitable outcomes in machine learning applications.
-\paragraph{Fair-by-design method}
-Since the huge impact that AI systems are having on daily life and more in general on the whole socio-technical systems it becomes crucial to design new AI methods and model that take account of fairness since the design step. That's why they are called fair-by-design methods.
-
-\paragraph{Structure of the Thesis}
-In the following is presented the \emph{State of the Art}, where are presented the basic concept on which this work is based. Then in \emph{Contribution} chapter there is the new contribution related to this work, that are the algorithms designed and implemented starting from the \emph{State of the Art}. The \emph{Evaluation} chapter provides a complete evalutation of the experiments results and the \emph{Conclusion and future work} presents ideas on what it's possible to achieve starting from the results of the work.
 %----------------------------------------------------------------------------------------
 \chapter{State of the Art} % or Background
 \label{chap:background}
