feat: contribution upgrades begun

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -297,7 +297,9 @@ In conclusion, fairness in AI is not just an ethical necessity but a fundamental
 \chapter{Contribution} % possible chapter for Projects
 \label{chap:contibution}
 %----------------------------------------------------------------------------------------
-In the subsequent discussion, there is a dissertation into the algorithms specifically crafted to address and mitigate fairness concerns. Fairness in algorithms has gained significant attention in recent years due to the realization that traditional computational processes can inadvertently perpetuate biases and disparities. Various approaches, ranging from re-weighting instances to modifying decision boundaries, aim to rectify these issues and promote a more equitable and just application of algorithms across diverse demographics. By exploring these approaches, the goal is to shed light on the potential solutions that can contribute to a more inclusive and fair technological landscape.
+"In the workflow presented in this work, it is essential to note that bias mitigation has been primarily achieved through the utilization of pre-processing techniques. These pre-processing methods are integrated into the early stages of the AI system's design, allowing for the identification and mitigation of bias in the data before the model's training and prediction phases. This deliberate emphasis on pre-processing as the core approach underscores the significance of addressing bias at its source, ensuring that the data used for AI model development is as fair and unbiased as possible.
+
+\section{Workflow description}
 
 \section{Fairness through unawareness with proxy detection}
 
