fix: contribution partially fixed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -297,7 +297,7 @@ In conclusion, fairness in AI is not just an ethical necessity but a fundamental
 \chapter{Contribution} % possible chapter for Projects
 \label{chap:contibution}
 %----------------------------------------------------------------------------------------
-"In the workflow presented in this work, it is essential to note that bias mitigation has been primarily achieved through the utilization of pre-processing techniques. These pre-processing methods are integrated into the early stages of the AI system's design, allowing for the identification and mitigation of bias in the data before the model's training and prediction phases. This deliberate emphasis on pre-processing as the core approach underscores the significance of addressing bias at its source, ensuring that the data used for AI model development is as fair and unbiased as possible.
+In the workflow presented in this work, it is essential to note that bias mitigation has been primarily achieved through the utilization of pre-processing techniques. These pre-processing methods are integrated into the early stages of the AI system's design, allowing for the identification and mitigation of bias in the data before the model's training and prediction phases. This deliberate emphasis on pre-processing as the core approach underscores the significance of addressing bias at its source, ensuring that the data used for AI model development is as fair and unbiased as possible.
 
 \section{Workflow description}
 
