feat: contibution updated

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -304,6 +304,12 @@ The Fair-by-Design workflow serves as the linchpin of this research. It guides t
 In the pages that follow, the intricacies of this workflow will be explored, providing a step-by-step elucidation of its various components and how they collectively contribute to the realization of a fair and unbiased AI system. This workflow will not only be a central theme throughout this chapter but also a thread that ties the entire thesis together. It signifies the commitment to addressing bias and promoting fairness within AI systems, particularly in the context of the educational domain. \\
 The journey will embark on a comprehensive exploration of the Fair-by-Design workflow, with the ultimate goal of mitigating bias, ensuring fairness, and achieving equitable outcomes in AI-driven decision-making.
 
+\section{Workflow description}
+The workflow presented in this work is composed of 4 different steps:
+\subsection{Data acquisition}
+\subsection{Data pre-processing}
+\subsection{Model Tuning}
+\subsection{Model evaluation}
 %----------------------------------------------------------------------------------------
 \chapter{Validation} % possible chapter for Projects
 \label{chap:validation}
