fix: subsection title fixed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -309,7 +309,7 @@ The workflow presented in this work is composed of 4 different steps:
 \subsection{Data acquisition}
 \subsection{Data pre-processing}
 \subsection{Model Tuning}
-\subsection{Model evaluation}
+\subsection{Performance evaluation}
 %----------------------------------------------------------------------------------------
 \chapter{Validation} % possible chapter for Projects
 \label{chap:validation}
